# dbt-date

./: .env_example  .gitignore  AGENTS.md  LICENSE  README.md  dbt_project.yml  dev-requirements.txt  makefile  pyproject.toml  supported_adapters.env  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci-mulitple-dbt-versions.yml  ci-multiple-dbt-versions-with-secrets.yml  ci-multiple-dbt-versions.yml  ci-secret-adapters.yml  ci.yml  release-pipeline.yml
integration_tests/: dbt_project.yml  docker-compose.yml  profiles.yml
integration_tests/macros/: get_test_dates.sql
integration_tests/models/: test_dates.yml
macros/_utils/: get_localized_datepart_names.sql
macros/calendar_date/: day_name_localized.sql  iso_year_week.sql
